[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/windows/Window.gd" type="Script" id=1]
[ext_resource path="res://utils/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/temp/minimize.png" type="Texture" id=3]
[ext_resource path="res://assets/temp/maximize.png" type="Texture" id=4]
[ext_resource path="res://assets/temp/close.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.937255, 0.937255, 0.937255, 1 )

[sub_resource type="Theme" id=3]
Button/styles/disabled = SubResource( 7 )
Button/styles/focus = SubResource( 8 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=12]
draw_center = false
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.760784, 0.164706, 0.105882, 1 )
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.83, 0.272793, 0.1992, 1 )
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.0627451, 0.0666667, 1 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -512.0
margin_bottom = -300.0
theme = SubResource( 3 )
script = ExtResource( 1 )

[node name="V" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Controls" type="Panel" parent="V"]
margin_right = 512.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_styles/panel = SubResource( 2 )

[node name="H" type="HBoxContainer" parent="V/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2

[node name="Minimize" parent="V/Controls/H" instance=ExtResource( 2 )]
margin_left = 332.0
margin_right = 392.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )

[node name="Icon" type="TextureRect" parent="V/Controls/H/Minimize"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Maximize" parent="V/Controls/H" instance=ExtResource( 2 )]
margin_left = 392.0
margin_right = 452.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )

[node name="Icon" type="TextureRect" parent="V/Controls/H/Maximize"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Close" parent="V/Controls/H" instance=ExtResource( 2 )]
margin_left = 452.0
margin_right = 512.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
normal_style = SubResource( 12 )
hover_style = SubResource( 10 )
pressed_style = SubResource( 11 )

[node name="Icon" type="TextureRect" parent="V/Controls/H/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ContentParent" type="Panel" parent="V"]
margin_top = 30.0
margin_right = 512.0
margin_bottom = 300.0
rect_clip_content = true
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="DoubleClickTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="gui_input" from="V/Controls" to="." method="_on_WindowControls_gui_input"]
[connection signal="pressed" from="V/Controls/H/Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="pressed" from="V/Controls/H/Maximize" to="." method="_on_Maximize_pressed"]
[connection signal="pressed" from="V/Controls/H/Close" to="." method="_on_Close_pressed"]
